language/move-compiler/tests/move_check/translate/friend_invalid_top_level.move
friend 0x2::mod;
